app/assets/stylesheets/admin.scss
/* ... */
.role-badge > b {
  text-transform: uppercase;
}

.badge-admin {
  background: rgba(236, 55, 80, 0.4);
}

.h-38 {
  height: 38px;
}

.admin-nav-item {
  position: relative;
}

.admin-nav-item {
  /* Make the <details> look more "clickable" */
  padding: 0 !important;
  background: none !important;
  border: none !important;
  border-radius: none !important;
}

summary {
  /* Makes the <summary> look more like a "clickable" link with the pointer cursor */
  cursor: pointer;
  font-weight: bold;
}

.events-filter-select {
  display: flex;
  flex-wrap: wrap;
}

.events-filter-select > label {
  display: flex;
  align-items: center;
  gap: 8px;
  min-width: 300px;
  margin-right: 16px;
}

.events-filter-select > label > select,
.events-filter-select > label > input {
  flex-grow: 1;
}

.logo-dark {
  display: none;
}

#admin-theme-toggle,
#admin-logout-button {
  color: var(--hcb-link-1);
  background: none;
  padding: 0px;
}
#admin-theme-toggle:hover,
#admin-logout-button:hover {
  color: var(--hcb-link-2);
}
form:has(> #admin-logout-button) {
  margin: 0px;
}

@keyframes flash-slide-in {
  from {
    translate: 0 calc(100% + var(--flash-offset, 0));
  }

  to {
    translate: 0 0;
  }
}

#flash-container {
  position: fixed;
  bottom: 0;
  right: 0;
  width: 50ch;
  display: flex;
  justify-content: center;
  overflow: hidden;

  article.flash {
    --flash-offset: 1rem;
    border: 1px solid var(--hcb-bg-3);
    border-top: 3px solid var(--hcb-accent);
    border-radius: 4px;
    background: var(--hcb-bg-1);
    padding: 1rem;
    margin: 0 var(--flash-offset) var(--flash-offset) 0;
    overflow: hidden;
    width: 100%;
    display: flex;
    align-items: center;
    box-shadow: 0 1px 2px hsl(240 3.8% 46.1% / 12%);
    animation-duration: 0.5s;
    animation-name: flash-slide-in;
    z-index: 999999;

    &.flash--success {
      border-top-color: var(--hcb-accent-active);
    }

    &.flash--error {
      border-top-color: var(--hcb-primary);
    }

    &.flash--dismissed {
      translate: 0 calc(100% + var(--flash-offset));
      display: none;
      transition-property: translate display;
      transition-duration: 0.5s;
      transition-behavior: allow-discrete;
    }

    .flash--content {
      flex: 1;
    }
  }

  .flash--close-button {
    display: flex;
    align-items: center;
    justify-content: center;
    background: transparent;
    padding: 0;
    margin: 0;
    color: inherit;
  }
}
.command-bar-item {
  display: flex;
  align-items: center;
  padding: 0.5rem 1rem;
  border-radius: var(--radius-md);
  color: inherit;
  transition: background-color 0.125s ease-in-out;
  cursor: pointer;
  &:hover {
    transition-duration: 0s;
  }
  &:active {
    transition-duration: 0.125s;
  }
}

@tailwind base;
@tailwind components;
@tailwind utilities;

:has(> .custom-tooltip) {
  position: relative;

  &:hover,
  &:active,
  &:focus {
    .custom-tooltip {
      opacity: 1;
      z-index: 9;
      backdrop-filter: blur(2px);
    }
  }
}

.custom-tooltip {
  & {
    background-color: rgba(map-get($palette, white), 0.875);
    border-radius: 0.5rem;
    box-shadow:
      0 0 2px 0 rgba(0, 0, 0, 0.0625),
      0 4px 8px 0 rgba(0, 0, 0, 0.125);
    color: map-get($palette, black);
    font-family: $font-family;
    font-size: 0.875rem;
    font-weight: 500;
    height: min-content;
    letter-spacing: 0;
    line-height: 1.375;
    max-width: 24rem;
    min-height: 1.25rem;
    opacity: 0;
    pointer-events: none;
    position: absolute;
    right: 100%;
    text-align: center;
    transform: translateY(50%);
    transition: 0.125s all ease-in-out;
    width: max-content;
    z-index: 9999;

    &.custom-tooltip--lg {
      max-width: 24rem;
    }
  }

  &:hover,
  &:active,
  &:focus {
    opacity: 1;
    z-index: 9;
    backdrop-filter: blur(2px);
  }
}

.custom-tooltip--e {
  left: 100%;
  bottom: 50%;
  right: 0;
  margin-left: 0.5rem;
  transform: translateY(50%);
}

.custom-tooltip--w {
  right: 100%;
  bottom: 50%;
  margin-right: 0.5rem;
  transform: translateY(50%);
}

.custom-tooltip--n {
  right: 50%;
  bottom: 100%;
  margin-bottom: 0.5rem;
  transform: translateX(50%);
}

.custom-tooltip--s {
  right: 50%;
  top: 100%;
  margin-top: 0.5rem;
  transform: translateX(50%);
}

.custom-tooltip--xl {
  & {
    max-width: none;
  }
}

